--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+
+  <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+  <script type="text/javascript" src="src/app/resources/resources.js"></script>
+  <script type="text/javascript" src="src/app/resources/users.js"></script>
 
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
