add Users Views

--- a/index.html
+++ b/index.html
@@ -45,8 +45,21 @@
   <script type="text/javascript" src="src/app/overview/module.js"></script>
   <script type="text/javascript" src="src/app/overview/controller.js"></script>
 
+  <script type="text/javascript" src="src/app/users/userHeader/module.js"></script>
+  <script type="text/javascript" src="src/app/users/userHeader/controller.js"></script>
+  
+  <script type="text/javascript" src="src/app/users/managedUers/module.js"></script>
+  <script type="text/javascript" src="src/app/users/managedUers/controller.js"></script>
+  
+  <script type="text/javascript" src="src/app/users/externalUers/module.js"></script>
+  <script type="text/javascript" src="src/app/users/externalUers/controller.js"></script>
+  
+  <script type="text/javascript" src="src/app/users/groups/module.js"></script>
+  <script type="text/javascript" src="src/app/users/groups/controller.js"></script>
+  
   <script type="text/javascript" src="src/app/users/module.js"></script>
   <script type="text/javascript" src="src/app/users/controller.js"></script>
+  
 
   <script type="text/javascript" src="src/app/reports/module.js"></script>
   <script type="text/javascript" src="src/app/reports/controller.js"></script>
