--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <script type="text/javascript" src="src/app/users/userHeader/module.js"></script>
   <script type="text/javascript" src="src/app/users/userHeader/controller.js"></script>
   
-  <script type="text/javascript" src="src/app/users/managedUers/module.js"></script>
-  <script type="text/javascript" src="src/app/users/managedUers/controller.js"></script>
+  <script type="text/javascript" src="src/app/users/managedUsers/module.js"></script>
+  <script type="text/javascript" src="src/app/users/managedUsers/controller.js"></script>
   
   <script type="text/javascript" src="src/app/users/externalUers/module.js"></script>
   <script type="text/javascript" src="src/app/users/externalUers/controller.js"></script>
@@ -67,6 +67,7 @@
   <script type="text/javascript" src="src/app/settings/module.js"></script>
   <script type="text/javascript" src="src/app/settings/controller.js"></script>
 
+  <script type="text/javascript" src="src/app/config.js"></script>
   <script type="text/javascript" src="src/app/app.js"></script>
   <!-- endbuild -->
 </body>
