--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <!-- build:css css/app.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.css">
   <link rel="stylesheet" type="text/css" href="build/default/app.css">
   <!-- endbuild -->
   
@@ -29,6 +31,8 @@
   <!-- build:js js/app.js -->
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="bower_components/angular-ui/build/angular-ui.js"></script>
+  <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
 
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -51,8 +55,8 @@
   <script type="text/javascript" src="src/app/users/managedUsers/module.js"></script>
   <script type="text/javascript" src="src/app/users/managedUsers/controller.js"></script>
   
-  <script type="text/javascript" src="src/app/users/externalUers/module.js"></script>
-  <script type="text/javascript" src="src/app/users/externalUers/controller.js"></script>
+  <script type="text/javascript" src="src/app/users/externalUsers/module.js"></script>
+  <script type="text/javascript" src="src/app/users/externalUsers/controller.js"></script>
   
   <script type="text/javascript" src="src/app/users/groups/module.js"></script>
   <script type="text/javascript" src="src/app/users/groups/controller.js"></script>
