--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
+  <script type="text/javascript" src="src/app/resources/group.js"></script>
 
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
