--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <!-- build:js js/app.js -->
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
 
