--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
+  <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
+  <script type="text/javascript" src="src/app/widgets/notification/service.js"></script>
+
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
   <script type="text/javascript" src="src/app/resources/group.js"></script>
