--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
+  <script type="text/javascript" src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+  <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
