--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
   
 </head>
 <body>
-  <header ng-include="'src/app/header/template.html'"></header>
-  <section class="container">
+  <div class="header" ng-include="'src/app/header/template.html'"></div>
+  <div class="container">
     <div class="row">
-      <sidebar class="col-md-3" ng-include="'src/app/sidebar/template.html'"></sidebar>
+      <div class="sidebar" class="col-md-3" ng-include="'src/app/sidebar/template.html'"></div>
       <div class="col-md-9" ui-view></div>
-      </div>
     </div>
-  </section>
+  </div>
 
   <!-- build:js js/app.js -->
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
@@ -34,8 +33,9 @@
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
   <script type="text/javascript" src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+    <script type="text/javascript" src="bower_components/es5-shim/es5-shim.js"></script>
   <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-
+  
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
