updateUser view and interface

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   
   <script type="text/javascript" src="src/app/users/managedUsers/module.js"></script>
   <script type="text/javascript" src="src/app/users/managedUsers/controller.js"></script>
+  <script type="text/javascript" src="src/app/users/managedUsers/editUser/module.js"></script>
+  <script type="text/javascript" src="src/app/users/managedUsers/editUser/controller.js"></script>
   
   <script type="text/javascript" src="src/app/users/externalUsers/module.js"></script>
   <script type="text/javascript" src="src/app/users/externalUsers/controller.js"></script>
