--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
   <script type="text/javascript" src="src/app/resources/group.js"></script>
+  <script type="text/javascript" src="src/app/resources/externalUsers.js"></script>
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
   <script type="text/javascript" src="src/app/sidebar/module.js"></script>
@@ -60,6 +61,8 @@
   
   <script type="text/javascript" src="src/app/users/groups/module.js"></script>
   <script type="text/javascript" src="src/app/users/groups/controller.js"></script>
+  <script type="text/javascript" src="src/app/users/groups/editGroup/module.js"></script>
+  <script type="text/javascript" src="src/app/users/groups/editGroup/controller.js"></script>
   
   <script type="text/javascript" src="src/app/users/module.js"></script>
   <script type="text/javascript" src="src/app/users/controller.js"></script>
