begin external users

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   
   <script type="text/javascript" src="src/app/users/externalUsers/module.js"></script>
   <script type="text/javascript" src="src/app/users/externalUsers/controller.js"></script>
+  <script type="text/javascript" src="src/app/users/externalUsers/editExternalUser/module.js"></script>
+  <script type="text/javascript" src="src/app/users/externalUsers/editExternalUser/controller.js"></script>
   
   <script type="text/javascript" src="src/app/users/groups/module.js"></script>
   <script type="text/javascript" src="src/app/users/groups/controller.js"></script>
