generate to publish

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <!-- build:css css/app.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
-  <link rel="stylesheet" type="text/css" href="build/default/app.css">
+  <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
   
 </head>
 <body>
   <div class="header" ng-include="'src/app/header/template.html'"></div>
   <div class="main">
-    <div class="sidebar" class="col-md-3" ng-include="'src/app/sidebar/template.html'"></div>
+    <div class="sidebar" ng-include="'src/app/sidebar/template.html'"></div>
     <div class="right-main" ui-view></div>
   </div>
   <!-- build:js js/app.js -->
