--- a/production/index.html
+++ b/production/index.html
@@ -9,7 +9,7 @@
   <title>Admin Console of Act</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/app.7a451a93.css">
+  <link rel="stylesheet" href="css/app.b134373d.css">
   
 </head>
 <body>
@@ -1023,11 +1023,11 @@
 <!-- End Templates -->
 
 
-  <div class="header" ng-include="&apos;src/app/header/template.html&apos;"></div>
+  <div class="header" ng-include="'src/app/header/template.html'"></div>
   <div class="main">
-    <div class="col-md-3" ng-include="&apos;src/app/sidebar/template.html&apos;"></div>
+    <div class="sidebar" ng-include="'src/app/sidebar/template.html'"></div>
     <div class="right-main" ui-view=""></div>
   </div>
-  <script src="js/app.ccded687.js"></script>
+  <script src="js/app.74e208b0.js"></script>
 </body>
 </html>
