--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-
+  
+  <!-- resources -->
+  <script type="text/javascript" src="src/app/resources/resources.js"></script>
+  <script type="text/javascript" src="src/app/resources/users.js"></script>
+  
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
 
