fix deps issues

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="header" ng-include="'src/app/header/template.html'"></div>
   <div class="main">
     <div class="sidebar" ng-include="'src/app/sidebar/template.html'"></div>
+    
     <div class="right-main" ui-view></div>
   </div>
   <!-- build:js js/app.js -->
@@ -40,8 +41,21 @@
 
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
+
   <script type="text/javascript" src="src/app/sidebar/module.js"></script>
   <script type="text/javascript" src="src/app/sidebar/controller.js"></script>
+
+  <script type="text/javascript" src="src/app/updates/module.js"></script>
+  <script type="text/javascript" src="src/app/updates/controller.js"></script>
+
+  <script type="text/javascript" src="src/app/files/module.js"></script>
+  <script type="text/javascript" src="src/app/files/controller.js"></script>
+
+  <script type="text/javascript" src="src/app/contacts/module.js"></script>
+  <script type="text/javascript" src="src/app/contacts/controller.js"></script>
+
+  <script type="text/javascript" src="src/app/trash/module.js"></script>
+  <script type="text/javascript" src="src/app/trash/controller.js"></script>
   
   <script type="text/javascript" src="src/app/config.js"></script>
   <script type="text/javascript" src="src/app/app.js"></script>
