--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <!-- resources -->
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
+  <script type="text/javascript" src="src/app/resources/folders.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
