--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
   <script type="text/javascript" src="src/app/resources/folders.js"></script>
+  <script type="text/javascript" src="src/app/resources/message.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
