use highchart to replace angular-chart

--- a/src/admin/overview/template.html
+++ b/src/admin/overview/template.html
@@ -1,8 +1,8 @@
 <div class="overview-view" ng-controller="App.Overview.Controller">
-	<div data-ac-chart="'bar'" data-ac-data="loginCountData" data-ac-config="loginCountConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'line'" data-ac-data="loginTrendData" data-ac-config="loginTrendConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'line'" data-ac-data="spaceTrendData" data-ac-config="spaceTrendConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'pie'" data-ac-data="data" data-ac-config="config" class="chart col-sm-4"></div>
+	<highchart config="loginCountConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
+	<highchart config="loginTrendConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceTrendConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
+	<highchart config="UserSpaceConfig" class="chart col-sm-4"></highchart>
 </div>
