--- a/admin.html
+++ b/admin.html
@@ -28,9 +28,11 @@
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
-  <script type="text/javascript" src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+
+  <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
+  <script type="text/javascript" src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+
   <script type="text/javascript" src="bower_components/es5-shim/es5-shim.js"></script>
-  <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
   <script type="text/javascript" src="bower_components/mb-scrollbar/mb-scrollbar.js"></script>
