--- a/src/admin/overview/template.html
+++ b/src/admin/overview/template.html
@@ -1,6 +1,6 @@
 <div class="overview-view" ng-controller="App.Overview.Controller">
 	<highchart config="loginCountConfig" class="chart col-sm-4"></highchart>
-	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
+	<highchart config="loginRankConfig" class="chart col-sm-4"></highchart>
 	<highchart config="loginTrendConfig" class="chart col-sm-4"></highchart>
 	<highchart config="spaceTrendConfig" class="chart col-sm-4"></highchart>
 	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
