--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- build:css css/app/app.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/angular-treeview/css/angular.treeview.css">
   <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
   
@@ -38,14 +39,18 @@
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script type="text/javascript" src="bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
+  <script type="text/javascript" src="bower_components/angular-treeview/angular.treeview.min.js"></script>
   <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/app/widgets/notification/factory.js"></script>
   <!-- resources -->
   <script type="text/javascript" src="src/app/resources/resources.js"></script>
   <script type="text/javascript" src="src/app/resources/users.js"></script>
   <script type="text/javascript" src="src/app/resources/folders.js"></script>
+  <script type="text/javascript" src="src/app/resources/files.js"></script>
   <script type="text/javascript" src="src/app/resources/message.js"></script>
   <script type="text/javascript" src="src/app/resources/folderAction.js"></script>
+  <script type="text/javascript" src="src/app/resources/downLoadFile.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
