upload file with angular-file-upload

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 	</div>
   </div>
   <!-- build:js js/app.js -->
+  <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
-  <script type="text/javascript" src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+
+  <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+  
   <script type="text/javascript" src="bower_components/es5-shim/es5-shim.js"></script>
   <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
