diccuss and share

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <script type="text/javascript" src="bower_components/angular-treeview/angular.treeview.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-snap/angular-snap.js"></script>
   <script type="text/javascript" src="bower_components/angular-snap/snap.js"></script>
+  <script type="text/javascript" src="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.js"></script>
   <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/app/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/app/widgets/utils/factory.js"></script>
@@ -65,6 +66,7 @@
   <script type="text/javascript" src="src/app/resources/folderAction.js"></script>
   <script type="text/javascript" src="src/app/resources/downLoadFile.js"></script>
   <script type="text/javascript" src="src/app/resources/share.js"></script>
+  <script type="text/javascript" src="src/app/resources/userDiscuss.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
@@ -78,6 +80,7 @@
   <script type="text/javascript" src="src/app/files/module.js"></script>
   <script type="text/javascript" src="src/app/files/controller.js"></script>
   <script type="text/javascript" src="src/app/files/teamcontroller.js"></script>
+  <script type="text/javascript" src="src/app/files/userDisscussController.js"></script>
 
   <script type="text/javascript" src="src/app/contacts/module.js"></script>
   <script type="text/javascript" src="src/app/contacts/controller.js"></script>
