--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-treeview/css/angular.treeview.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-snap/angular-snap.min.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-select/dist/css/bootstrap-select.css">
   <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
   
@@ -60,6 +61,8 @@
   <script type="text/javascript" src="bower_components/angular-snap/angular-snap.js"></script>
   <script type="text/javascript" src="bower_components/angular-snap/snap.js"></script>
   <script type="text/javascript" src="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.js"></script>
+  <script type="text/javascript" src="bower_components/angular-bootstrap-select/build/angular-bootstrap-select.min.js"></script>
+  <script type="text/javascript" src="bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
   <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/app/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/app/widgets/utils/factory.js"></script>
