--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script type="text/javascript" src="bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
-  <script type="text/javascript" src="bower_components/angular-treeview/angular.treeview.min.js"></script>
+  <script type="text/javascript" src="bower_components/ng-context-menu/dist/ng-context-menu.js"></script>
+  <script type="text/javascript" src="bower_components/angular-treeview/angular.treeview.js"></script>
   <script type="text/javascript" src="bower_components/angular-snap/angular-snap.js"></script>
   <script type="text/javascript" src="bower_components/angular-snap/snap.js"></script>
   <script type="text/javascript" src="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.js"></script>
