--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
   <script type="text/javascript" src="src/app/resources/downLoadFile.js"></script>
   <script type="text/javascript" src="src/app/resources/share.js"></script>
   <script type="text/javascript" src="src/app/resources/userDiscuss.js"></script>
+  <script type="text/javascript" src="src/app/resources/cloud.js"></script>
+  <script type="text/javascript" src="src/app/resources/shareAction.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
