--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <script type="text/javascript" src="bower_components/ng-pageslide/dist/angular-pageslide-directive.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap-select/build/angular-bootstrap-select.min.js"></script>
   <script type="text/javascript" src="bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
+  <script type="text/javascript" src="bower_components/ng-clip/src/ngClip.js"></script>
+  <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/app/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/app/widgets/utils/factory.js"></script>
